force-app/main/default/objects/cfr__CloudFile__c.object
<CustomObject>
    <fields>
        <fullName>cfr__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfr__FolderId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FolderId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfr__ObjectName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ObjectName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfr__Object_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfr__URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>CloudFile</label>
    <listViews>
        <fullName>cfr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>